--- a/code/41_results.Rmd
+++ b/code/41_results.Rmd
@@ -331,6 +331,328 @@ all_df_gamma |>
 
 ```  
 
+## Example Datasets  
+
+```{r}
+dat_combined <- readRDS(here::here("results/example_datasets.RDS"))
+```
+
+
+### Option 1  
+
+```{r plot_ex_opt1}
+plot_boxplot_extremes <- ggplot(
+  dat_combined,
+  aes(x = prop_extreme_lbl, y = TOTEXPYY, 
+      fill = prop_extreme_lbl, color = prop_extreme_lbl)
+) +
+  geom_boxplot(
+    outlier.shape  = 16,
+    outlier.size   = 0.8,
+    outlier.alpha  = 0.4,
+    width          = 0.5,
+    color          = "grey30",   # fixed outline color so boxes don't blend in
+    linewidth      = 0.5
+  ) +
+  scale_y_continuous(labels = scales::dollar_format(scale = 1e-3, suffix = "K")) +
+  scale_fill_manual(
+    values = c(
+      "1% Extreme"  = "#4E9ABE",
+      "5% Extreme"  = "#F4A261",
+      "10% Extreme" = "#E76F51"
+    ),
+    guide = "none"
+  ) +
+  scale_color_manual(
+    values = c(
+      "1% Extreme"  = "#4E9ABE",
+      "5% Extreme"  = "#F4A261",
+      "10% Extreme" = "#E76F51"
+    ),
+    guide = "none"
+  ) +
+  labs(
+    title    = "Distribution of Total Expenditures by Proportion of Extreme Values",
+    subtitle = "Magnitude level = 1 ($50,000–$1,000,000); Sample size = 5,000; outlier dots show extreme values",
+    x        = "Proportion of Extreme Values",
+    y        = "Total Expenditure"
+  ) +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title         = element_text(face = "bold"),
+    plot.subtitle      = element_text(color = "grey40"),
+    panel.grid.major.x = element_blank()
+  )
+
+plot_boxplot_extremes
+
+ggsave(
+  here::here(paste0("figures/boxplot_extremes_", dt, ".png")),
+  plot_boxplot_extremes,
+  width = 8, height = 6, dpi = 300
+)
+
+
+```   
+
+### Option 2  
+
+```{r ex_opt2}
+library(patchwork)
+
+# Left panel: zoomed in on bulk of distribution
+p_zoom <- ggplot(
+  dat_combined,
+  aes(x = prop_extreme_lbl, y = TOTEXPYY, fill = prop_extreme_lbl)
+) +
+  geom_violin(
+    trim  = FALSE,
+    alpha = 0.8,
+    color = "white"
+  ) +
+  geom_boxplot(
+    width         = 0.08,
+    fill          = "white",
+    outlier.shape = NA,
+    color         = "grey30",
+    linewidth     = 0.5
+  ) +
+  coord_cartesian(ylim = c(0, 5000)) +
+  scale_y_continuous(labels = scales::dollar_format(scale = 1e-3, suffix = "K")) +
+  scale_fill_manual(
+    values = c(
+      "1% Extreme"  = "#4E9ABE",
+      "5% Extreme"  = "#F4A261",
+      "10% Extreme" = "#E76F51"
+    ),
+    guide = "none"
+  ) +
+  labs(
+    title    = "A) Bulk of Distribution",
+    subtitle = "Zoomed to $0–$5K",
+    x        = NULL,
+    y        = "Total Expenditure"
+  ) +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title         = element_text(face = "bold"),
+    plot.subtitle      = element_text(color = "grey40"),
+    panel.grid.major.x = element_blank()
+  )
+
+library(patchwork)
+
+# Compute a zoom cutoff: just below where extremes start (q95 of prop=0.01 condition)
+zoom_cutoff <- quantile(dat_example1$TOTEXPYY, 0.95)
+
+# --- Left panel: zoomed boxplot of bulk ---
+p_bulk <- ggplot(
+  dat_combined,
+  aes(x = prop_extreme_lbl, y = TOTEXPYY, fill = prop_extreme_lbl)
+) +
+  geom_boxplot(
+    outlier.shape = NA,   # suppress outliers — shown separately on right
+    width         = 0.5,
+    color         = "grey30",
+    linewidth     = 0.5
+  ) +
+  coord_cartesian(ylim = c(0, zoom_cutoff)) +
+  scale_y_continuous(labels = scales::dollar_format(scale = 1e-3, suffix = "K")) +
+  scale_fill_manual(
+    values = c(
+      "1% Extreme"  = "#4E9ABE",
+      "5% Extreme"  = "#F4A261",
+      "10% Extreme" = "#E76F51"
+    ),
+    guide = "none"
+  ) +
+  labs(
+    title    = "A) Bulk of Distribution",
+    subtitle = glue::glue("Zoomed to ≤ {scales::dollar(zoom_cutoff, scale=1e-3, suffix='K')} (95th percentile)"),
+    x        = NULL,
+    y        = "Total Expenditure"
+  ) +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title         = element_text(face = "bold"),
+    plot.subtitle      = element_text(color = "grey40"),
+    panel.grid.major.x = element_blank()
+  )
+
+# --- Right panel: only extreme values ---
+dat_extremes <- dat_combined %>%
+  filter(TOTEXPYY > zoom_cutoff)
+
+p_extremes <- ggplot(
+  dat_extremes,
+  aes(x = prop_extreme_lbl, y = TOTEXPYY, color = prop_extreme_lbl)
+) +
+  geom_jitter(
+    width  = 0.2,
+    size   = 1.2,
+    alpha  = 0.4
+  ) +
+  scale_y_continuous(labels = scales::dollar_format(scale = 1e-6, suffix = "M")) +
+  scale_color_manual(
+    values = c(
+      "1% Extreme"  = "#4E9ABE",
+      "5% Extreme"  = "#F4A261",
+      "10% Extreme" = "#E76F51"
+    ),
+    guide = "none"
+  ) +
+  labs(
+    title    = "B) Extreme Values Only",
+    subtitle = glue::glue("Values above 95th percentile ({scales::dollar(zoom_cutoff, scale=1e-3, suffix='K')})"),
+    x        = NULL,
+    y        = NULL
+  ) +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title         = element_text(face = "bold"),
+    plot.subtitle      = element_text(color = "grey40"),
+    panel.grid.major.x = element_blank()
+  )
+
+# --- Combine ---
+plot_twopanel <- patchwork::wrap_plots(p_bulk, p_extremes, ncol = 2, widths = c(1.2, 1)) +
+  plot_annotation(
+    title    = "Distribution of Total Expenditures by Proportion of Extreme Values",
+    subtitle = "Magnitude level = 1 ($50K–$1M); n = 5,000",
+    caption  = "Note: Panel A shows the bulk of the distribution (below 95th percentile).\nPanel B shows only values above the 95th percentile, illustrating how the extreme tail grows with proportion.",
+    theme    = theme(
+      plot.title    = element_text(face = "bold", size = 14),
+      plot.subtitle = element_text(color = "grey40"),
+      plot.caption  = element_text(color = "grey40", hjust = 0)
+    )
+  )
+
+plot_twopanel
+
+ggsave(
+  here::here(paste0("figures/twopanel_extremes_", dt, ".png")),
+  plot_twopanel,
+  width = 11, height = 6, dpi = 300
+)
+```
+
+
+### Option 3  
+```{r split_hist}
+# --- Data: positive values only ---
+dat_combined_pos <- dat_combined |> filter(TOTEXPYY > 0)
+
+bulk_cut <- 50000
+
+# --- Get actual max bin height from 10% extreme right panel ---
+get_max_bin_count <- function(prop_lbl) {
+  dat <- dat_combined_pos |>
+    filter(prop_extreme_lbl == prop_lbl, TOTEXPYY > bulk_cut)
+  h <- ggplot_build(
+    ggplot(dat, aes(x = TOTEXPYY)) + geom_histogram(bins = 60)
+  )
+  max(h$data[[1]]$count, na.rm = TRUE)
+}
+
+right_max_count <- get_max_bin_count("10% Extreme")
+right_max_count  # sanity check
+
+# --- Panel builder ---
+make_hist_panel <- function(prop_lbl, col, show_x, show_y, title = NULL, y_limit = NULL) {
+  
+  fill_col <- c(
+    "1% Extreme"  = "#4E9ABE",
+    "5% Extreme"  = "#F4A261",
+    "10% Extreme" = "#E76F51"
+  )[prop_lbl]
+  
+  dat <- dat_combined_pos |> filter(prop_extreme_lbl == prop_lbl)
+  
+  if (col == "left") {
+    dat     <- dat |> filter(TOTEXPYY <= bulk_cut)
+    x_scale <- list(
+      scale_x_continuous(
+        labels = scales::dollar_format(scale = 1e-3, suffix = "K")
+      ),
+      coord_cartesian(xlim = c(0, bulk_cut))
+    )
+    x_lab <- if (show_x) "Expenditure (≤ $50K)" else NULL
+    
+  } else {
+    dat     <- dat |> filter(TOTEXPYY > bulk_cut)
+    x_scale <- list(
+      scale_x_continuous(
+        labels = scales::dollar_format(scale = 1e-6, suffix = "M")
+      )
+    )
+    x_lab <- if (show_x) "Expenditure (> $50K)" else NULL
+  }
+  
+  p <- ggplot(dat, aes(x = TOTEXPYY)) +
+    geom_histogram(
+      bins      = 60,
+      fill      = fill_col,
+      color     = "white",
+      linewidth = 0.2
+    ) +
+    x_scale +
+    scale_y_continuous(
+      labels = scales::comma,
+      limits = y_limit
+    ) +
+    labs(
+      title = title,
+      x     = x_lab,
+      y     = if (show_y) paste0(prop_lbl, "\n\nCount") else NULL
+    ) +
+    theme_minimal(base_size = 11) +
+    theme(
+      plot.title         = element_text(face = "bold", size = 10, hjust = 0.5),
+      axis.title.x       = element_text(size = 9, color = "grey40"),
+      axis.title.y       = element_text(size = 9),
+      axis.text.x        = if (show_x) element_text(size = 8) else element_blank(),
+      axis.ticks.x       = if (show_x) element_line() else element_blank(),
+      panel.grid.minor   = element_blank()
+    )
+  
+  p
+}
+
+# --- Build 6 panels ---
+p_1_left   <- make_hist_panel("1% Extreme",  "left",  show_x = FALSE, show_y = TRUE,  title = "Bulk (≤ $50K)")
+p_1_right  <- make_hist_panel("1% Extreme",  "right", show_x = FALSE, show_y = FALSE, title = "Extremes (> $50K)", y_limit = c(0, right_max_count * 1.05))
+p_5_left   <- make_hist_panel("5% Extreme",  "left",  show_x = FALSE, show_y = TRUE,  title = NULL)
+p_5_right  <- make_hist_panel("5% Extreme",  "right", show_x = FALSE, show_y = FALSE, title = NULL,               y_limit = c(0, right_max_count * 1.05))
+p_10_left  <- make_hist_panel("10% Extreme", "left",  show_x = TRUE,  show_y = TRUE,  title = NULL)
+p_10_right <- make_hist_panel("10% Extreme", "right", show_x = TRUE,  show_y = FALSE, title = NULL,               y_limit = c(0, right_max_count * 1.05))
+
+# --- Compose ---
+plot_hist_sixpanel <- patchwork::wrap_plots(
+  p_1_left,  p_1_right,
+  p_5_left,  p_5_right,
+  p_10_left, p_10_right,
+  nrow = 3, ncol = 2
+)
+
+plot_hist_sixpanel <- plot_hist_sixpanel + 
+	patchwork::plot_annotation(
+  title    = "Distribution of Positive Expenditures by Proportion of Extreme Values",
+  subtitle = "Rows = proportion of extreme values (1%, 5%, 10%); Left = bulk (≤$50K); Right = extreme tail (>$50K)\nMagnitude level = 1 ($50,000–$1,000,000); n = 5,000; restricted to positive spenders",
+  caption  = "Note: Zero-expenditure observations excluded; modeled separately via logistic component.\nRight column y-axis fixed to 10% extreme condition maximum to allow direct comparison across rows."
+)
+
+plot_hist_sixpanel
+
+ggsave(
+  here::here(paste0("figures/hist_sixpanel_extremes_", dt, ".png")),
+  plot_hist_sixpanel,
+  width  = 10,
+  height = 9,
+  dpi    = 300
+)
+```
+
+
 ## Bias
 
 ### Descriptives  
